Fixed navigation z-index issue, and removed debugging outline.

--- a/app/en/(modules)/navigation.module.css
+++ b/app/en/(modules)/navigation.module.css
@@ -9,11 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.container > * > * 
-{
-    outline: 1px solid black;
+    z-index: 3;
 }
 
 .container > nav
